--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="js/jquery-migrate-1.4.1.min.js">
-
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <script>
-
+        $.ajax({
+            method: 'GET',
+            url: 'http://localhost:8000/api/post/',
+        })
+        .done(function(response) {
+            console.log('Done!');
+            console.log(response);
+        })
+        .fail(function(response) {
+            console.log('Fail!');
+            console.log(response);
+        })
     </script>
 </body>
 </html>
